@@ -26,7 +26,8 @@
 ;order=0
 
 ; Set following option for the initial clue group displayed when the contest begin
-; It sets the "initial_cgrp_id" config option
+; It sets the "initial_cgrp_ids" config option
+; Multiple clue groups can be set as "start"
 ; 
 ;start=1
 
