@@ -7,7 +7,7 @@ class Iquest_Options{
 
     const START_TIME      = "start_time";
     const END_TIME        = "end_time";
-    const INITIAL_CGRP_ID = "initial_cgrp_id";
+    const INITIAL_CGRP_IDS = "initial_cgrp_ids";
     const FINAL_CGRP_ID   = "final_cgrp_id";
     const REVEAL_GOAL_CGRP_ID = "reveal_goal_cgrp_id";
     const WALLET_ACTIVE   = "wallet_active";
@@ -34,7 +34,7 @@ class Iquest_Options{
 
     public static $supported_options = array(self::START_TIME,
                                              self::END_TIME,
-                                             self::INITIAL_CGRP_ID,
+                                             self::INITIAL_CGRP_IDS,
                                              self::FINAL_CGRP_ID,
                                              self::REVEAL_GOAL_CGRP_ID,
                                              self::WALLET_ACTIVE,
