@@ -12,6 +12,8 @@
             e.g. point_to[]=ID1, ID2, ID3 is same as point_to[]=ID1,ID2,ID3
 * metadata: possibility to specify name of file containing the logo displayed in top left corner
 * chroust: Username/password for HQ interface shall be defined in metadata file now
+* Possibility to open multiple clue groups when a key is entered
+* Possibility to open multiple clue groups when a the contest starts
 
 rel 0.1.6
 * HQ: table - hyperlinks in popup info 
